Fix text align.

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,5 +1,4 @@
 * {
-  text-align: center;
   font-family: Helvetica;
 }
 
@@ -11,29 +10,35 @@ header h1 {
   font-size: 70px;
   font-weight: bold;
   color: white;
+  text-align: center;
 }
 
 header li {
   list-style-type: none;
+  text-align: center;
 }
 
 li a {
   font-size: 18px;
   color: white;
+  text-align: center;
 }
 
 section h2 {
   font-size: 32px;
   font-weight: bold;
+  text-align: center;
 }
 
 section h3 {
   font-size: 23px;
   font-weight: bold;
+  text-align: center;
 }
 
 #about p {
   font-size: 14px;
+  text-align: center;
 }
 
 #design {
@@ -41,6 +46,7 @@ section h3 {
   font-size: 23px;
   font-weight: bold;
   color: white;
+  text-align: center;
 }
 
 footer {
